--- a/SFMLGame.vcxproj
+++ b/SFMLGame.vcxproj
@@ -144,15 +144,29 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Arrow.cpp" />
+    <ClCompile Include="Controller.cpp" />
+    <ClCompile Include="ControllerDown.cpp" />
+    <ClCompile Include="ControllerLeft.cpp" />
+    <ClCompile Include="ControllerRight.cpp" />
+    <ClCompile Include="ControllerUp.cpp" />
     <ClCompile Include="Drawer.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Resources.cpp" />
+    <ClCompile Include="Song.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Arrow.h" />
     <ClInclude Include="ArrowDirection.h" />
+    <ClInclude Include="Controller.h" />
+    <ClInclude Include="ControllerDown.h" />
+    <ClInclude Include="ControllerLeft.h" />
+    <ClInclude Include="ControllerRight.h" />
+    <ClInclude Include="ControllerUp.h" />
     <ClInclude Include="Drawer.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Resources.h" />
+    <ClInclude Include="Song.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
