commit naar jesse toe!

--- a/SFMLGame.vcxproj.filters
+++ b/SFMLGame.vcxproj.filters
@@ -34,7 +34,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TitleScreen.cpp">
-    <ClCompile Include="Song.cpp">
+	</ClCompile>
+	<ClCompile Include="Song.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Controller.cpp">
@@ -68,6 +69,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TitleScreen.h">
+      <Filter>Header Files</Filter>
+   </ClInclude>
     <ClInclude Include="Song.h">
       <Filter>Header Files</Filter>
     </ClInclude>
