--- a/SFMLGame.vcxproj
+++ b/SFMLGame.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="TitleScreen.cpp" />
     <ClCompile Include="Resources.cpp" />
     <ClCompile Include="Song.cpp" />
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="Arrow.h" />
     <ClInclude Include="ArrowDirection.h" />
     <ClInclude Include="Controller.h" />
